--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 Django==3.2.22
+django-jazzmin==2.6.0
 jmespath==1.0.1
 Pillow==9.5.0
 pycparser==2.21
@@ -10,3 +11,4 @@ six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 urllib3==1.26.17
+whitenoise==6.6.0
